# quant-demix-rwkv

./: Dockerfile  PLAN.md  README.md  pyproject.toml  repo_structure.md
.github/agents/: architect.agent.md
.github/workflows/: ci.yaml  docker-ci.yaml
artifacts/dry_run/: data.csv
checkpoints/: ckpt-epoch001.pt
configs/: config.yaml
configs/data/: libri2mix.yaml
configs/experiment/: baseline_tf.yaml  dry_run.yaml
configs/model/: rwkv_v7_separator.yaml
configs/stft/: default.yaml
configs/training/: default.yaml
scripts/: _fix_csv.py  _make_dry_run_data.py  make_csv.py  train.py
src/rwkv_ss/: __init__.py
src/rwkv_ss/data/: __init__.py  datamodule.py
src/rwkv_ss/data/datasets/: libri2mix.py
src/rwkv_ss/models/: __init__.py  registry.py
src/rwkv_ss/models/rwkv_v7/: __init__.py  config.py  separator.py
src/rwkv_ss/training/: engine.py  pipeline.py  trainer.py
src/rwkv_ss/training/callbacks/: checkpoint.py  early_stopping.py
src/rwkv_ss/training/losses/: pit_si_sdr.py
src/rwkv_ss/training/optim/: factory.py
src/rwkv_ss/transforms/: __init__.py  stft.py
src/rwkv_ss/utils/: rwkv_env.py
tests/: conftest.py  test_datamodule.py  test_stft_shapes.py
