[tool.poetry]
name = "rwkv-ss"
version = "0.1.0"
description = "RWKV-v7 TF-domain speech separation"
authors = []
readme = "PLAN.md"
packages = [{ include = "rwkv_ss", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
torch = ">=2.0"
torchaudio = ">=2.0"
soundfile = ">=0.12"
numpy = ">=1.24"
tqdm = ">=4.65"
tensorboard = ">=2.14"

[tool.poetry.extras]
# Optional extras: install with `poetry install --with eval` or `--with cuda`
cuda = ["torch"]
eval = ["pesq", "pystoi", "torchmetrics"]

[tool.poetry.group.cuda.dependencies]
# Placeholder for CUDA-specific pinned torch builds; CI/docs should provide exact install URL
# Consumers should install the appropriate CUDA wheel via pip or use the 'cuda' extra

[tool.poetry.group.eval.dependencies]
pesq = "*"
pystoi = "*"
torchmetrics = ">=0.11"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "cuda: tests that require a CUDA device",
]
