[tool.poetry]
name = "rwkv-ss"
version = "0.1.0"
description = "RWKV-v7 TF-domain speech separation"
authors = []
readme = "README.md"
packages = [{ include = "rwkv_ss", from = "src" }]

[tool.poetry.dependencies]
python       = "^3.10"
soundfile    = ">=0.12"
numpy        = ">=1.24"
tqdm         = ">=4.65"
tensorboard  = ">=2.14"
torch         = ">=2.0.0"
torchaudio    = ">=2.0.0"
pyyaml = "^6.0.3"

# Optional: surfaced to pip consumers via extras
pesq          = {version = ">=0.0.4", optional = true}
pystoi        = {version = ">=0.4.1", optional = true}
torchmetrics  = {version = ">=1.0",   optional = true}

[tool.poetry.extras]
cuda = ["torch", "torchaudio"]
eval = ["torch", "torchaudio", "pesq", "pystoi", "torchmetrics"]

# Groups remain for the development workflow (poetry install --with cuda/eval)
[tool.poetry.group.cuda.dependencies]
torch      = ">=2.0.0"
torchaudio = ">=2.0.0"

[tool.poetry.group.eval.dependencies]
pesq         = ">=0.0.4"
pystoi       = ">=0.4.1"
torchmetrics = ">=1.0"
# NOTE: torchmetrics[text] and torchmetrics[dev] extras conflict with tqdm>=4.68.0.
# Do not install those extras in this environment without first pinning tqdm<4.68.0.

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "cuda: tests that require a CUDA device",
]
